Edit of the index.html and the files in recipes
The position of the links in the index.html files were changed as per
 instructions
 The files in recipes all had the initial of the "ingredients"
 capitalized

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,11 +14,11 @@ img{
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna" alt="This is a lasagna image"> <br>
+    <img src="../images/lasagna" height="300px" alt="This is a lasagna image"> <br>
     <h3>Recipe for a mouth watering lasagna</h3>
     <p>The recipe for this lasagna is simple and easy to grasp making it easy to learn</p>
     <p>The ingredients for this lasagna are really basic making it easy to cook anywhere and at anytime.</p>
-    <h2>ingredients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>parmesan</li>
         <li>ground beef</li>
