--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -18,7 +18,7 @@ img{
     <h3>Recipe for a mouth watering pasta</h3>
     <p>The recipe for this pasta is simple and easy to grasp making it easy to learn</p>
     <p>The ingredients for this pasta are really basic making it easy to cook anywhere and at anytime.</p>
-    <h2>ingredients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>flour</li>
         <li>eggs</li>
