--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -18,7 +18,7 @@ img{
     <h3>Recipe for a mouth watering smoothie</h3>
     <p>The recipe for this smoothie is simple and easy to grasp making it easy to learn</p>
     <p>The ingredients for this smoothie are really basic making it easy to cook anywhere and at anytime.</p>
-    <h2>ingredients</h2>
+    <h2>Ingredients</h2>
     <ul>
         <li>1 cup frozen mixed berries</li>
         <li>1 frozen ripe banana</li>
