--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
         *{
     margin: 10px;
 }
-body{
-    text-align: center;
-}
 img{
     border-radius: 50%;
 }
@@ -18,8 +15,10 @@ img{
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/smoothie.html">Smoothie</a>
-    <a href="recipes/pasta.html">Pasta</a>
+    <ul>
+       <li><a href="recipes/lasagna.html">Lasagna</a></li>
+       <li><a href="recipes/smoothie.html">Smoothie</a></li>
+       <li><a href="recipes/pasta.html">Pasta</a></li>
+    </ul>
 </body>
 </html>
