Addition of style.css

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,43 +3,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        *{
-    margin: 10px;
-}
-img{
-    border-radius: 50%;
-}
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-    <h1>Lasagna</h1>
-    <img src="../images/lasagna" height="300px" alt="This is a lasagna image"> <br>
-    <h3>Recipe for a mouth watering lasagna</h3>
-    <p>The recipe for this lasagna is simple and easy to grasp making it easy to learn</p>
-    <p>The ingredients for this lasagna are really basic making it easy to cook anywhere and at anytime.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>parmesan</li>
-        <li>ground beef</li>
-        <li>noodles</li>
-        <li>fresh basil</li>
-        <li>garlic</li>
-        <li>cottage cheese</li>
-        <li>eggs</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Firstly, add breakfast sausage coupled with ground beef and garlic to a pot</li>
-        <li>then you'll put in whole tomatoes, a couple of tomatoe pastes, dried parsely and salt </li>
-        <li>stir till it looks good</li>
-        <li>next is to cook the noodles </li>
-        <li>then in a bowl , break in a couple of eggs about 2 or 3 plus cottage cheese, parmesan ,dried parsely and salt. Then stir</li>
-        <li>inside a big bowl , do some layering at the bottom followed by the mix from the step above then some cheese on top then add the mix from step 3 </li>
-        <li>repeat the layering process , then more cheese on top  with that mix from step 3 </li>
-        <li>repeat one more time with what you have left of step 3 mix (meat sauce) then add parmesan</li>
-        <li>then finally put in the over for some time </li>
-        <li>Serve when done</li>
-    </ol>
+<body id="lasagna-body">
+    <h1>Lasagna</h1>  
+    <div id="lasagna-div">
+            <img src="../images/lasagna" height="300px" alt="This is a lasagna image"> <br>
+        <h3>Recipe for a mouth watering lasagna</h3>
+        <p>The recipe for this lasagna is simple and easy to grasp making it easy to learn</p>
+        <p>The ingredients for this lasagna are really basic making it easy to cook anywhere and at anytime.</p>
+            <h2>Ingredients</h2>
+        <ul>
+            <li>Parmesan</li>
+            <li>Ground beef</li>
+            <li>Noodles</li>
+            <li>Fresh basil</li>
+            <li>Garlic</li>
+            <li>Cottage cheese</li>
+            <li>Eggs</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>1. Firstly, add breakfast sausage coupled with ground beef and garlic to a pot</li>
+            <li>2. Then you'll put in whole tomatoes, a couple of tomatoe pastes, dried parsely and salt </li>
+            <li>3. Stir till it looks good</li>
+            <li>4. Next is to cook the noodles </li>
+            <li>5. Then in a bowl , break in a couple of eggs about 2 or 3 plus cottage cheese, parmesan ,dried parsely and salt. Then stir</li>
+            <li>6. Inside a big bowl , do some layering at the bottom followed by the mix from the step above then some cheese on top then add the mix from step 3 </li>
+            <li>7. Repeat the layering process , then more cheese on top  with that mix from step 3 </li>
+            <li>8. Repeat one more time with what you have left of step 3 mix (meat sauce) then add parmesan</li>
+            <li>9. Then finally put in the over for some time </li>
+            <li>10. Serve when done</li>
+        </ol>
+    </div>
+    <a id="homepage-btn" href="../index.html"><button>Home page</button></a>
 </body>
 </html>
