--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -3,45 +3,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        *{
-    margin: 10px;
-}
-img{
-    border-radius: 50%;
-}
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body id="pasta-body">
     <h1>Pasta</h1>
-    <img src="../images/pasta.jpeg" alt="This is a lasagna image"> <br>
-    <h3>Recipe for a mouth watering pasta</h3>
-    <p>The recipe for this pasta is simple and easy to grasp making it easy to learn</p>
-    <p>The ingredients for this pasta are really basic making it easy to cook anywhere and at anytime.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>flour</li>
-        <li>eggs</li>
-        <li>olive oil</li>
-        <li>sea salt</li>
-    </ul> 
-    <h2>Steps</h2>
-    <ol>
-        <li>Firstly, make a nest in the flour </li>
-        <li>break the eggs in the flour</li>
-        <li>incorporate the flour</li>
-        <li>knead for 5-10 min</li>
-        <li>if it's too dry , sprinkle water</li>
-        <li>if it's too dry, add dust flour</li>
-        <li>shape into a ball</li>
-        <li>wrap and rest for 30 min</li>
-        <li>cut into 4 pieces then flatten into a disk</li>
-        <li>USING LEVEL 1 ,roll through pasta attachment</li>
-        <li>fold the ends of that pasta towards the center, then fold in half  </li>
-        <li>USING LEVEL 2 & 3 ,roll 3 times</li>
-        <li>USING LEVEL 4, 5, & 6 ,roll once</li>
-        <li>run through pasta attachment</li>
-        <li>cook fresh pasta in boiling water for 1-2 min</li>
-    </ol>
+    <div id="pasta-div">
+            <img src="../images/pasta.jpeg" height="300" alt="This is a lasagna image"> <br>
+        <h3>Recipe for a mouth watering pasta</h3>
+        <p>The recipe for this pasta is simple and easy to grasp making it easy to learn</p>
+        <p>The ingredients for this pasta are really basic making it easy to cook anywhere and at anytime.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Flour</li>
+            <li>Eggs</li>
+            <li>Olive oil</li>
+            <li>Sea salt</li>
+        </ul> 
+        <h2>Steps</h2>
+        <ol>
+            <li>1. Firstly, make a nest in the flour </li>
+            <li>2. Break the eggs in the flour</li>
+            <li>3. Incorporate the flour</li>
+            <li>4. Knead for 5-10 min</li>
+            <li>5. If it's too dry , sprinkle water</li>
+            <li>6. If it's too dry, add dust flour</li>
+            <li>7. Shape into a ball</li>
+            <li>8. Wrap and rest for 30 min</li>
+            <li>9. Cut into 4 pieces then flatten into a disk</li>
+            <li>10. USING LEVEL 1 ,roll through pasta attachment</li>
+            <li>11. Fold the ends of that pasta towards the center, then fold in half  </li>
+            <li>12. USING LEVEL 2 & 3 ,roll 3 times</li>
+            <li>13. USING LEVEL 4, 5, & 6 ,roll once</li>
+            <li>14. Run through pasta attachment</li>
+            <li>15. Cook fresh pasta in boiling water for 1-2 min</li>
+        </ol>
+    </div>
+    <a id="homepage-btn" href="../index.html"><button>Home page</button></a>
 </body>
 </html>
