--- a/index.html
+++ b/index.html
@@ -3,22 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-    margin: 10px;
-}
-img{
-    border-radius: 50%;
-}
-    </style>
+    <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="main-body">
     <h1>Odin Recipes</h1>
-    <ul>
-       <li><a href="recipes/lasagna.html">Lasagna</a></li>
-       <li><a href="recipes/smoothie.html">Smoothie</a></li>
-       <li><a href="recipes/pasta.html">Pasta</a></li>
+    <ul id="landing-page">
+       <li><a href="recipes/lasagna.html"><button id="lasagna">Lasagna</button></a></li>
+       <li><a href="recipes/smoothie.html"><button id="smoothie">Smoothie</button></a></li>
+       <li><a href="recipes/pasta.html"><button id="pasta">Pasta</button></a></li>
     </ul>
 </body>
 </html>
