--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -3,32 +3,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        *{
-    margin: 10px;
-}
-img{
-    border-radius: 50%;
-}
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body id="smoothie-body">
     <h1>Smoothie</h1>
-    <img src="../images/smoothie.webp" alt="This is a lasagna image"> <br>
-    <h3>Recipe for a mouth watering smoothie</h3>
-    <p>The recipe for this smoothie is simple and easy to grasp making it easy to learn</p>
-    <p>The ingredients for this smoothie are really basic making it easy to cook anywhere and at anytime.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 cup frozen mixed berries</li>
-        <li>1 frozen ripe banana</li>
-        <li>1/2 cup low-fat vanilla yogurt</li>
-        <li>1/4 cup orange juice</li>
-        <li>1 teaspoon honey (optional)</li>
-    </ul>
-    <h2>Step</h2>
-    <ul>
-        <li>Combine all ingredients together in a blender and puree until smooth</li>
-    </ul>
+    <div id="smoothie-div">
+            <img src="../images/smoothie.webp" alt="This is a lasagna image"> <br>
+        <h3>Recipe for a mouth watering smoothie</h3>
+        <p>The recipe for this smoothie is simple and easy to grasp making it easy to learn</p>
+        <p>The ingredients for this smoothie are really basic making it easy to cook anywhere and at anytime.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 cup frozen mixed berries</li>
+            <li>1 frozen ripe banana</li>
+            <li>1/2 cup low-fat vanilla yogurt</li>
+            <li>1/4 cup orange juice</li>
+            <li>1 teaspoon honey (optional)</li>
+        </ul>
+        <h2>Step</h2>
+        <ul>
+            <li>Combine all ingredients together in a blender and puree until smooth</li>
+        </ul>
+    </div>
+    <a id="homepage-btn" href="../index.html"><button>Home page</button></a>
 </body>
 </html>
